# agrilab

./: .gitignore  manage.py  pyproject.toml  render.yaml
agrilab/: asgi.py  settings.py  urls.py  wsgi.py
hotbox/: admin.py  apps.py  models.py  urls.py  views.py
hotbox/management/commands/: import.py
hotbox/migrations/: 0001_initial.py  0002_auto_20211106_0220.py  0003_source_path.py
tests/: test_agrilab.py
