[tool.poetry]
name = "agrilab"
version = "0.1.0"
description = ""
authors = ["Joe di Stefano <joeydi@okaypl.us>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.9"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.9.1"
whitenoise = "^5.3.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
